--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -29,7 +29,7 @@
 
     %link{:href => "//cloud.typography.com/6764732/687468/css/fonts.css", :rel => "stylesheet", :type => "text/css"}/
     = stylesheet_link_tag "styles"
-    = javascript_include_tag  "app"
+    = javascript_include_tag  "jquery.smoothState.min", "imagesloaded.pkgd.min", "app"
 
   %body{:class => page_classes}
     = yield
