--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -20,6 +20,7 @@
     %meta{:content => "Pixels Magazine", :name => "twitter:title"}/
     %meta{:content => "Pixels Magazine is a digital publication that celebrates the wonderful people at 500px. The individual pixels that contributes to our shared mission."}/
     %meta{:content => "http://pixelsmag.com/images/og.jpg", :name => "twitter:image"}/
+    %meta{:content => "noindex", :name => "robots"}/
 
     %title= current_page.data.title
     %script(type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js")
