--- a/source/issues/1.haml
+++ b/source/issues/1.haml
@@ -298,7 +298,7 @@ description: Pixels Magazine is a digital publication that celebrates the wonder
         %p.content_section_body
           Geez, there's so much. The hack weekend is turning out to be really fun. Akbar and I are working on a really cool project - he calls it censorship but it's like being a hooligan about search terms and finding a cool way to troll people about their inappropriate search terms.
         %p.content_section_body
-          Also, being able to work with a lot of data and things that are directly in contact with the user are cool. Not necessarily the app or the features, but things that directly influence KPIs. You get to stay really in touch with how we're making money, what's really a burning problem, why are uploads slacking. YOu feel the constant urge when you don't see the numbers change each week - you feel it in your heart, like "oh no I need to fix this!".
+          Also, being able to work with a lot of data and things that are directly in contact with the user are cool. Not necessarily the app or the features, but things that directly influence KPIs. You get to stay really in touch with how we're making money, what's really a burning problem, why are uploads slacking. You feel the constant urge when you don't see the numbers change each week - you feel it in your heart, like "oh no I need to fix this!".
         %p.content_section_body.bold
           What are you doing in 10 years?
         %p.content_section_body
