--- a/source/issues/1.haml
+++ b/source/issues/1.haml
@@ -106,7 +106,7 @@ description: Pixels Magazine is a digital publication that celebrates the wonder
         Lorena is the VP of Operations at 500px. She's a Colombian turned American turned Canadian, with two kids and a wonderful personality. If you've ever had a conversation with her, you know that she carries with her an awesome energy that inspires everyone that she interacts with.
       .content_section_separator
       %p.content_section_body.bold
-        You grew up in Columbia. Can you tell me a little bit about your childhood?
+        You grew up in Colombia. Can you tell me a little bit about your childhood?
       %p.content_section_body
         I had a really awesome childhood. I'm the middle child of an older brother and a younger sister. We were very close - well, my brother used to beat me up, but generally very close. I grew up in a really lucky household: two parents who loved each other, kids who got along well, big family. I loved dancing and eating lots of food.
       %p.content_section_body.bold
