--- a/source/issues/1.haml
+++ b/source/issues/1.haml
@@ -334,7 +334,7 @@ description: Pixels Magazine is a digital publication that celebrates the wonder
             %span.content_section_table_body
               Three
         %p.content_section_body
-          Probably being in the darkroom busting out the final few weeks of our last release for v4 iOS and tackling problems with the rest of the team. It was nice getting to know each other and doing working on  challenges.
+          Probably being in the darkroom busting out the final few weeks of our last release for v4 iOS and tackling problems with the rest of the team. It was nice getting to know each other and working on challenges.
         %p.content_section_body
           The culture is awesome, the people are awesome - so much talent in one room is exciting. It's always an honour to be with the mobile team and to learn from them.
         %p.content_section_body.bold
