--- a/source/stylesheets/styles.sass
+++ b/source/stylesheets/styles.sass
@@ -2,6 +2,8 @@
 
 body
   background-color: $light-grey
+  &.index
+    overflow: hidden !important
 
 h1, h2, h3, h4, h5, span, p, a, blockquote, em
   font-family: "Chronicle SSm A", "Chronicle SSm B"
@@ -23,9 +25,22 @@ h1, h2, h3, h4, h5, span, p, a, blockquote, em
       opacity: 1
       transform: translateY(0)
     &.reverse
-      .top, .toc, .cover_section_back
-        opacity: 0
-        transform: translateY(20px) !important
+      opacity: 0
+      transform: translateY(20px) !important
+      transition: all 1s cubic-bezier(0.11, 0.82, 0.32, 1)
+
+  .back_link
+    line-height: 30px
+    color: $medium-grey
+    font-size: 14px
+    cursor: pointer
+    position: absolute
+    left: 10px
+    top: 10px
+    z-index: 100
+    transition: all 0.2s
+    &:hover
+      opacity: 0.7
 
   .dark_overlay
     position: fixed
@@ -382,18 +397,25 @@ h1, h2, h3, h4, h5, span, p, a, blockquote, em
       font-weight: bold
 
 .page_home
-  padding-top: 100px
   &.loaded
     .issue
       transition: transform 1s cubic-bezier(0.11, 0.82, 0.32, 1), opacity 1s cubic-bezier(0.11, 0.82, 0.32, 1), box-shadow 0.5s cubic-bezier(0.29, 0.9, 0.36, 1)
       transform: scale(1)
       opacity: 1
     &.reverse
+      .controls_arrow, .controls_keys
+        opacity: 0
       .issue
         opacity: 0
         transform: scale(0.95) !important
   &.ready_for_hover
+    .controls_arrow, .controls_keys
+      opacity: 0.4
+    .controls_arrow
+      &:hover
+        opacity: 1
     .issue
+      transition: left 1s cubic-bezier(0.29, 0.9, 0.36, 1), transform 1s cubic-bezier(0.11, 0.82, 0.32, 1), opacity 1s cubic-bezier(0.11, 0.82, 0.32, 1), box-shadow 0.5s cubic-bezier(0.29, 0.9, 0.36, 1)
       &:hover
         transform: scale(1.005)
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3)
@@ -402,8 +424,9 @@ h1, h2, h3, h4, h5, span, p, a, blockquote, em
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.15)
 
 .issue
-  position: relative
+  position: absolute
   display: inline-block
+  top: 180px
   width: 593px
   height: 816px
   background-size: cover
@@ -416,6 +439,49 @@ h1, h2, h3, h4, h5, span, p, a, blockquote, em
   img
     width: 100%
     height: 100%
+
+.controls
+  position: absolute
+  top: 75px
+  left: 50%
+  margin-left: -90px
+  width: 180px
+  height: 25px
+
+.controls_arrow
+  position: absolute
+  width: 23px
+  height: 16px
+  background-image: url('/images/arrow.svg')
+  background-repeat: no-repeat
+  background-size: cover
+  left: 0
+  cursor: pointer
+  opacity: 0
+  transition: all 0.4s
+  &.right
+    transform: rotate(180deg)
+    left: auto
+    right: 0
+
+.controls_keys
+  position: absolute
+  width: 38px
+  height: 25px
+  left: 50%
+  bottom: 4px
+  opacity: 0
+  transform: translateX(-50%)
+  transition: all 0.4s
+  background-image: url('/images/keys.svg')
+  background-repeat: no-repeat
+  background-size: cover
+
+@media only screen and (max-width: 480px)
+  .controls_keys
+    background-image: url('/images/swipe.svg')
+    background-position: center
+    background-size: contain
 
 @media only screen and (max-width: 700px)
   .page_issue
