--- a/source/issues/1.haml
+++ b/source/issues/1.haml
@@ -5,7 +5,7 @@ description: Pixels Magazine is a digital publication that celebrates the wonder
 
 .wrapper#smooth
   .page_issue
-    %a.back_link
+    %a.back_link(href="/")
       Back to home
     .dark_overlay
     .sticky_nav
@@ -80,7 +80,7 @@ description: Pixels Magazine is a digital publication that celebrates the wonder
               Just married
         / %span.start_reading
         /   Scroll down to start reading.
-    .content_section.section_one
+    .intro_section.section_one
       %h2.content_section_heading
         Editors' Note
       %p.content_section_body
