--- a/source/issues/2.haml
+++ b/source/issues/2.haml
@@ -102,7 +102,7 @@ description: Pixels Magazine is a digital publication that celebrates the wonder
         Alexandra Kim
       %img.content_section_image.main(src="/images/issues/oct2015/ak_main.jpg")
       %p.content_section_body.bold
-        Alexandra Kim, although more commonly known as AK, is a the Product Marketing Manager at 500px. She's an incredibly passionate and dedicated individual, but more importantly, a wonderful friend. The Toronto office misses her very much.
+        Alexandra Kim, although more commonly known as AK, is the Product Marketing Manager at 500px. She's an incredibly passionate and dedicated individual, but more importantly, a wonderful friend. The Toronto office misses her very much.
       .content_section_separator
       %p.content_section_body.bold
         You had a very international upbringing, having lived in lots of places around the world. What was that like?
@@ -124,7 +124,7 @@ description: Pixels Magazine is a digital publication that celebrates the wonder
       %p.content_section_body
         I joined 500px because of its position in the Toronto tech scene and potential growth opportunities. (There was also the secondary reason that I love that 500px is in the creative space.) In SF there are a lot of tech companies that are a lot more prominent than 500px. But the growth opportunities still remain and that's exciting.
       %p.content_section_body.bold
-        You worked with the Toronto team for a year or so, then moved to SF team. What's something you miss most about Toronto?
+        You worked with the Toronto team for a year or so, then moved to SF. What's something you miss most about Toronto?
       %p.content_section_body
         I miss being able to see and talk to everyone in person every day. The best thing about 500px is the team. I consider everyone I work with a friend, and it's like not being able to see your friends after spending so much time with them.
       %p.content_section_body.bold
