--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -36,8 +36,10 @@
     / Use page specific stylesheet
     / = stylesheet_link_tag (data.page.stylesheet ? data.page.stylesheet : {})
 
-    %link{:href => "//cloud.typography.com/6764732/687468/css/fonts.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "//cloud.typography.com/7645894/6836952/css/fonts.css", :rel => "stylesheet", :type => "text/css"}/
     = stylesheet_link_tag "styles"
+    %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.min.js", :type => "text/javascript"}
+    %script{:src => "https://cdnjs.cloudflare.com/ajax/libs/masonry/3.2.2/masonry.pkgd.min.js", :type => "text/javascript"}
     = javascript_include_tag  "jquery.smoothState.min", "hammer.min", "app"
 
   %body{:class => page_classes}
