--- a/source/stylesheets/styles.sass
+++ b/source/stylesheets/styles.sass
@@ -272,7 +272,7 @@ h1, h2, h3, h4, h5, span, p, a, blockquote, em
     &.thanks
       margin-bottom: 20px
     &.with_subheading
-      margin-bottom: 10px
+      margin-bottom: 20px
 
   .content_section_subheading
     display: inline-block
@@ -431,6 +431,10 @@ h1, h2, h3, h4, h5, span, p, a, blockquote, em
     &.bold
       font-weight: bold
 
+  .photo-grid--item
+    width: calc((100% - 20px) / 3)
+    margin-bottom: 10px
+
 .page_home
   &.loaded
     .issue
@@ -556,6 +560,8 @@ h1, h2, h3, h4, h5, span, p, a, blockquote, em
       display: block
       width: calc(100%)
       padding: 0
+    .photo-grid--item
+      width: calc((100% - 10px) / 2)
 
 @keyframes fadeIn
   0%
